fix: removes htmx.js

--- a/Public/index.html
+++ b/Public/index.html
@@ -24,7 +24,7 @@
         Fetch Users
       </button>
       <div id="loader" class="htmx-indicator text-white mt-10">...Loading</div>
-      <div class="text-white" id="users"></div>
+      <ul class="text-white" id="users"></ul>
     </div>
   </body>
 </html>
